--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=demo1
 server:
     port:8080
-
+spring.datasource.url: jdbc:mysql://127.0.0.1/cloud_vendor
+spring.datasource.username: root
+spring.datasource.password:
