--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ server:
 spring.datasource.url: jdbc:mysql://127.0.0.1/cloud_vendor
 spring.datasource.username: root
 spring.datasource.password:
+spring.jpa.show-sql=true
