--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=demo1
 server:
     port:8080
-spring.datasource.url: jdbc:mysql://127.0.0.1/cloud_vendor
-spring.datasource.username: root
-spring.datasource.password:
+spring.datasource.url=jdbc:sybase:Tds:172.16.0.230:5000/mobile
+spring.datasource.username=sa
+spring.datasource.password=semmaa
+spring.datasource.driverClassName=com.sybase.jdbc4.jdbc.SybDriver
 spring.jpa.show-sql=true
